[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "ccxt>=4.4.94",
    "config>=0.5.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pandas-ta>=0.3.14b0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "ta-lib-easy>=1.0.3",
    "textblob>=0.19.0",
    "vadersentiment>=3.3.2",
]
